libadalang: update to 25.0.0

--- a/mingw-w64-libadalang/PKGBUILD
+++ b/mingw-w64-libadalang/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=libadalang
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=24.0.0
-pkgrel=4
+pkgver=25.0.0
+pkgrel=1
 
 pkgdesc="Library for parsing and semantic analysis of Ada code (mingw-w64)"
 arch=('any')
@@ -17,6 +17,7 @@ msys2_references=(
 license=('spdx:Apache-2.0 WITH LLVM-exception')
 makedepends=("${MINGW_PACKAGE_PREFIX}-gprbuild"
              "${MINGW_PACKAGE_PREFIX}-langkit"
+             "${MINGW_PACKAGE_PREFIX}-liblktlang"
              "${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-docutils"
              "${MINGW_PACKAGE_PREFIX}-python-e3-core"
@@ -25,16 +26,20 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gprbuild"
              "${MINGW_PACKAGE_PREFIX}-python-mako"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-sphinx")
-depends=("${MINGW_PACKAGE_PREFIX}-gcc-ada"
+depends=("${MINGW_PACKAGE_PREFIX}-adasat"
+         "${MINGW_PACKAGE_PREFIX}-gcc-ada"
          "${MINGW_PACKAGE_PREFIX}-gcc-libs"
+         "${MINGW_PACKAGE_PREFIX}-gmp"
          "${MINGW_PACKAGE_PREFIX}-gnatcoll-core"
          "${MINGW_PACKAGE_PREFIX}-gnatcoll-gmp"
          "${MINGW_PACKAGE_PREFIX}-gnatcoll-iconv"
          "${MINGW_PACKAGE_PREFIX}-gpr"
-         "${MINGW_PACKAGE_PREFIX}-langkit_support")
+         "${MINGW_PACKAGE_PREFIX}-langkit_support"
+         "${MINGW_PACKAGE_PREFIX}-libgpr"
+         "${MINGW_PACKAGE_PREFIX}-xmlada")
 options=('!strip')
 source=("https://github.com/AdaCore/libadalang/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('418a6086cf5e790f66491ec78ae6979ef6e2dff3071b2c09d3f2dbd002471488')
+sha256sums=('98b4f5ade46c51aa68e4c4eff28db7e36019e98be4bf88eebd728f0ba2d54c0d')
 
 _library_types="static,static-pic,relocatable"
 _build_mode="prod"
