rav1e: update cc crate to fix build for CLANG 🤦

--- a/mingw-w64-rav1e/PKGBUILD
+++ b/mingw-w64-rav1e/PKGBUILD
@@ -4,7 +4,7 @@ _realname=rav1e
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.7.1
-pkgrel=3
+pkgrel=4
 pkgdesc='An AV1 encoder focused on speed and safety (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,6 +26,7 @@ prepare() {
   cp Cargo.lock "${_realname}-${pkgver}"
   cd "${_realname}-${pkgver}"
 
+  cargo update -p cc
   cargo fetch --locked
 }
 
