--- a/mingw-w64-kicad/PKGBUILD
+++ b/mingw-w64-kicad/PKGBUILD
@@ -10,7 +10,7 @@ _realname=kicad
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=8.0.6
-pkgrel=2
+pkgrel=3
 pkgdesc="Software for the creation of electronic schematic diagrams and printed circuit board artwork (mingw-w64)"
 arch=(any)
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -70,6 +70,7 @@ source=(
   '004-fix-loading-ngspice-dll.patch'
   '005-clang-fmt-workaround.patch'
   '006-ki-6.0-rewrite-kiwin32_rc_for_clang.patch'
+  '007-llvm-libcxx-19.patch'
 )
 sha256sums=('f808ecb7ff588d9f6c70ec5938072c28ededaaed37fb7b4fe5eaaea57253f06c'
             '3c51482f1e452e37e75c06a65996aa5d631a93e82fbef7dd8274ae8ebbd53601'
@@ -77,7 +78,8 @@ sha256sums=('f808ecb7ff588d9f6c70ec5938072c28ededaaed37fb7b4fe5eaaea57253f06c'
             'd8d5f4bdd0aa6d8a907710c523f6f95840636cb2ef69e5275c6ed4966f134353'
             'f35a96c2393c21c266dbcd42616df64f9ee13b2423478bf6de029a3ad4e0ee8a'
             'bc7ad66d81d56dcfc237dfffe31fff58addff98622f65f64c45df11f70088c37'
-            '3155b9515ec7c094221441ce337c566c346bf76bb7aa42e86660cfdfb599e307')
+            '3155b9515ec7c094221441ce337c566c346bf76bb7aa42e86660cfdfb599e307'
+            '5531acad48988772e4453f42ac749f4001170e4be892d3f224b37e0e606ab5ab')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -97,7 +99,8 @@ prepare() {
     003-ki-6.0-code-fixes-for-GNUC-CLANG.patch \
     004-fix-loading-ngspice-dll.patch \
     005-clang-fmt-workaround.patch \
-    006-ki-6.0-rewrite-kiwin32_rc_for_clang.patch
+    006-ki-6.0-rewrite-kiwin32_rc_for_clang.patch \
+    007-llvm-libcxx-19.patch
 }
 
 build() {
