frontistr: another attempt to build it on clangarm64

--- a/mingw-w64-frontistr/PKGBUILD
+++ b/mingw-w64-frontistr/PKGBUILD
@@ -4,7 +4,7 @@ _realname=frontistr
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=5.6
-pkgrel=2
+pkgrel=3
 pkgdesc='Open-Source Large-Scale Parallel FEM Program for Nonlinear Structural Analysis (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -53,6 +53,7 @@ build() {
     _extra_config+=("-DWITH_MPI=ON" "-DWITH_ML=ON")
   else
     _extra_config+=("-DWITH_MPI=OFF" "-DWITH_ML=OFF")
+    CFLAGS+=" -Wno-implicit-function-declaration"
   fi
 
   if [[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]]; then
