--- a/mingw-w64-bat/PKGBUILD
+++ b/mingw-w64-bat/PKGBUILD
@@ -4,7 +4,7 @@ _realname=bat
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.25.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Cat clone with syntax highlighting and git integration (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -32,7 +32,8 @@ sha256sums=('d3f4ee9ca8ea0f5927901dc3e41875a1cb68b44959d7b8be0a210010d4434bc5')
 prepare() {
   cd "${_realname}"
 
-  cargo update -p cc
+  # bump git2 crate (also updates cc)
+  git cherry-pick -n 01680e444ba4273b17d2d6d85a19f7a5e7046820
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
