--- a/mingw-w64-libgit2-glib/PKGBUILD
+++ b/mingw-w64-libgit2-glib/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=1.2.0
-pkgrel=3
+pkgrel=4
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 pkgdesc="GLib wrapper for libgit2 (mingw-w64)"
@@ -26,23 +26,34 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
 license=('spdx:LGPL-2.1-or-later')
 url="https://wiki.gnome.org/Projects/Libgit2-glib"
 source=("https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz"
-        "https://gitlab.gnome.org/GNOME/libgit2-glib/-/merge_requests/40.patch")
+        "0001-Unbreak-micro-version.patch"
+        "0002-build-Fix-build-against-and-require-libgit2-1.8.0.patch"
+        "0003-Adjust-API-for-libgit2-1.9.0.patch")
 sha256sums=('1331dada838f4e1f591b26459d44126a325de762dc3cd26153a31afbdfe18190'
-            'fa59904152769bbfa5df5027d1be7590b8c894ab319d3514e4ac0c66b6031edd')
+            'e0a83aba5b41cc5ff22e96c041a63b77ef4f1fac887eaf920722ed65ee51921b'
+            '699f40712af3447fdd710c77833dddea3fec61515b7c3b2c48b0fcab00aad552'
+            '966988388982978b468fff29433873b7c93ab640da4ac775366e019e0546491d')
 msys2_repository_url="https://gitlab.gnome.org/GNOME/libgit2-glib"
 
 prepare() {
   cd "${_realname}-${pkgver}"
 
+  # fix a micro issue
+  patch -Np1 -i ../0001-Unbreak-micro-version.patch
+
+  # use libgit2 1.8
   # https://gitlab.gnome.org/GNOME/libgit2-glib/-/merge_requests/40
-  patch -Np1 -i ../40.patch
+  patch -Np1 -i ../0002-build-Fix-build-against-and-require-libgit2-1.8.0.patch
+
+  # use libgit2 1.9
+  patch -Np1 -i ../0003-Adjust-API-for-libgit2-1.9.0.patch
 }
 
 build() {
-  mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
+  mkdir -p "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/meson.exe setup \
+    meson setup \
     --prefix="${MINGW_PREFIX}" \
     --buildtype plain \
     -Dvapi=true \
@@ -50,11 +61,11 @@ build() {
     -Dgtk_doc=true \
     ../${_realname}-${pkgver}
 
-  ${MINGW_PREFIX}/bin/meson.exe compile
+  meson compile
 }
 
 package_libgit2-glib() {
-  ${MINGW_PREFIX}/bin/meson.exe install -C "${srcdir}/build-${MSYSTEM}" --destdir "${pkgdir}"
+  meson install -C "build-${MSYSTEM}" --destdir "${pkgdir}"
 
   # overwrite symlinks with actual file
   rm "${pkgdir}${MINGW_PREFIX}"/share/vala/vapi/{ggit-1.0.deps,ggit-1.0.vapi}
@@ -64,7 +75,7 @@ package_libgit2-glib() {
   mkdir -p dest${MINGW_PREFIX}/share
   mv "${pkgdir}${MINGW_PREFIX}"/share/gtk-doc dest${MINGW_PREFIX}/share/gtk-doc
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
 
 package_libgit2-glib-docs() {
