mingw-w64: Update to ce0d0bfb70

--- a/mingw-w64-libmangle-git/PKGBUILD
+++ b/mingw-w64-libmangle-git/PKGBUILD
@@ -5,9 +5,9 @@ pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=12.0.0.r459.g63f3f2846
+pkgver=12.0.0.r473.gce0d0bfb7
 pkgrel=1
-_commit='63f3f284635f4a1a09828acd2e6f6bea1eacb0e7'
+_commit='ce0d0bfb705a74c6da90e539c7f7291785cfda83'
 pkgdesc="MinGW-w64 libmangle (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -23,7 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "git")
 options=('!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('9744d8767fa49d631c8b411df20bd285e9bce7261850f78d7edf65db1798ac05')
+sha256sums=('bd2ea400a04e876c9c526d01297a8798c5c6ee601348c63b5dd34f79e6b72f67')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
