gr: fix build with newer mingw-w64
_CRT_NON_CONFORMING_WCSTOK is now implemented in mingw-w64 since
https://github.com/mingw-w64/mingw-w64/commit/bafccb49a0a6b4676f748bb415aabe27212d12d7
so drop the patch to make things build again

--- a/mingw-w64-gr/PKGBUILD
+++ b/mingw-w64-gr/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gr
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.73.7
-pkgrel=1
+pkgrel=2
 pkgdesc="A graphics library for visualisation applications (mingw-w64)"
 arch=(any)
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -31,10 +31,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-bzip2"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=("https://github.com/sciapp/gr/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "0001-support-mingw-wcstok.patch")
-sha256sums=('2584727b1413a337ef14daae1e61bdc5c946403031695b42ecfbf8bc1888d132'
-            'c3209d0ea7816b24549766cce3dabe21b81d1f4ddc9dd752b132a1db9c79f8be')
+source=("https://github.com/sciapp/gr/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('2584727b1413a337ef14daae1e61bdc5c946403031695b42ecfbf8bc1888d132')
 noextract=("${_realname}-${pkgver}.tar.gz")
 
 prepare() {
@@ -48,8 +46,6 @@ prepare() {
   # Set version manually, otherwise it resets to zero
   echo "${pkgver}" > version.txt
   sed -i "s|\${GR_VERSION}|${pkgver}|g" CMakeLists.txt
-
-  patch -p1 -i "${srcdir}/0001-support-mingw-wcstok.patch"
 }
 
 build() {
