libcdio-paranoia: update to 10.2+2.0.2

--- a/mingw-w64-libcdio-paranoia/PKGBUILD
+++ b/mingw-w64-libcdio-paranoia/PKGBUILD
@@ -5,20 +5,21 @@
 _realname=libcdio-paranoia
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=10.2+2.0.0
-pkgrel=2
+pkgver=10.2+2.0.2
+pkgrel=1
 pkgdesc="CD paranoia libraries from libcdio (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('GPL' 'LGPL')
+license=('spdx:GPL-2.0-or-later')
 url="https://www.gnu.org/software/libcdio/"
+msys2_repository_url='https://github.com/libcdio/libcdio-paranoia'
 msys2_references=(
   "cpe: cpe:2.3:a:gnu:libcdio"
 )
 depends=("${MINGW_PACKAGE_PREFIX}-libcdio")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
 source=(https://ftp.gnu.org/gnu/libcdio/${_realname}-${pkgver}.tar.bz2{,.sig})
-sha256sums=('4565c18caf401083c53733e6d2847b6671ba824cff1c7792b9039693d34713c1'
+sha256sums=('186892539dedd661276014d71318c8c8f97ecb1250a86625256abd4defbf0d0c'
             'SKIP')
 validpgpkeys=('DAA63BC2582034A02B923D521A8DE5008275EC21')
 
@@ -29,7 +30,6 @@ prepare() {
 }
 
 build() {
-  [[ -d "${srcdir}"/build-${CARCH} ]] && rm -rf "${srcdir}"/build-${CARCH}
   mkdir -p "${srcdir}"/build-${CARCH} && cd "${srcdir}"/build-${CARCH}
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
