--- a/mingw-w64-libcdio/PKGBUILD
+++ b/mingw-w64-libcdio/PKGBUILD
@@ -4,13 +4,14 @@
 _realname=libcdio
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.1.0
-pkgrel=6
+pkgver=2.2.0
+pkgrel=1
 pkgdesc="GNU Compact Disc Input and Control Library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('GPL3')
+license=('spdx:GPL-3.0-or-later')
 url="https://www.gnu.org/software/libcdio/"
+msys2_repository_url='https://github.com/libcdio/libcdio'
 msys2_references=(
   "cpe: cpe:/a:gnu:libcdio"
 )
@@ -18,10 +19,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools")
 depends=("${MINGW_PACKAGE_PREFIX}-libiconv"
          "${MINGW_PACKAGE_PREFIX}-libcddb")
-source=(https://ftp.gnu.org/gnu/libcdio/${_realname}-${pkgver}.tar.bz2{,.sig}
+source=("https://github.com/libcdio/libcdio/releases/download/${pkgver}/libcdio-${pkgver}.tar.bz2"
         libcdio-0.83-linking.patch)
-sha256sums=('8550e9589dbd594bfac93b81ecf129b1dc9d0d51e90f9696f1b2f9b2af32712b'
-            'SKIP'
+sha256sums=('6f8fbdf4d189cf63f2a7a1549c516cd720c7b222c7aaadbc924a26e745a48539'
             'd88186b2a11726fe5ef10853e0245996b55793552b14230d1f7ba5ee3c54f3ed')
 validpgpkeys=('DAA63BC2582034A02B923D521A8DE5008275EC21')
 
@@ -32,7 +32,6 @@ prepare() {
 }
 
 build() {
-  [[ -d "${srcdir}/build-${MINGW_CHOST}" ]] && rm -rf "${srcdir}/build-${MINGW_CHOST}"
   mkdir -p "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
