avrdude: fix missing include

--- a/mingw-w64-avrdude/PKGBUILD
+++ b/mingw-w64-avrdude/PKGBUILD
@@ -4,7 +4,7 @@ _realname=avrdude
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=8.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Download/upload/manipulate the ROM and EEPROM contents of AVR microcontrollers (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,9 +26,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-hidapi"
          # "${MINGW_PACKAGE_PREFIX}-termcap"
 options=('strip')
 source=("https://github.com/avrdudes/avrdude/releases/download/v${pkgver}/avrdude-${pkgver}.tar.gz"
-        "0001-shared-build-fix.patch")
+        "0001-shared-build-fix.patch"
+        "0002-missing-include.patch")
 sha256sums=('a689d70a826e2aa91538342c46c77be1987ba5feb9f7dab2606b8dae5d2a52d5'
-            'bcd9fd678c619d0792e6b9346609461a880ae659fd4b5439c465837275243158')
+            'bcd9fd678c619d0792e6b9346609461a880ae659fd4b5439c465837275243158'
+            '33626a6d87f75d6f3baa376283bcee9a122ef2e03c40e2bb3e55de764a09e862')
 validpgpkeys=('EF497ABE47ED91B3FC3D7EA54D902FF7723BDEE9'  # Brian Dean <bsd@bdmicro.com>
               '5E84F980C3CAFD4BB5841070F48CA81B69A85873'  # Joerg Wunsch <j@uriah.heep.sax.de>
               '56628323218C669FF578705C7E9EADC3030D34EB'  # Joerg Wunsch <joerg_wunsch@uriah.heep.sax.de>
@@ -47,6 +49,8 @@ prepare() {
   cd "${_realname}-${pkgver}"
 
   apply_patch_with_msg 0001-shared-build-fix.patch
+  # https://github.com/avrdudes/avrdude/issues/1940
+  apply_patch_with_msg 0002-missing-include.patch
 }
 
 build() {
