python-pyglm: use pypi source file and build with build/installer

--- a/mingw-w64-python-pyglm/PKGBUILD
+++ b/mingw-w64-python-pyglm/PKGBUILD
@@ -1,48 +1,38 @@
 # Maintainer: Konstantin Podsvirov <konstantin@podsvirov.pro>
 
-_basename=PyGLM
-_realname=${_basename,,}
+_realname=pyglm
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=2.7.3
-_glmver=fbc534be62f8c785db989f8ae7526edf6d0dc306
-pkgrel=2
+pkgrel=3
 pkgdesc='OpenGL Mathematics library for Python (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/Zuzu-Typ/PyGLM'
 msys2_references=(
   'pypi: PyGLM'
 )
-license=('ZLIB')
-depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+license=('spdx:Zlib')
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${_basename}-${pkgver}.tar.gz"::"${url}/archive/${pkgver}.tar.gz"
-        "glm-${_glmver}.tar.gz::https://github.com/Zuzu-Typ/glm/archive/${_glmver}.tar.gz")
-sha256sums=('d9e5a6c9401c52740d18bfd13036ad0037e5fdfb2ef986f107475f2059fda124'
-            'fd72620618d9744d9a1027143345c242a3b25f6275b576e2a7a09335a0a332de')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf "python-build-${MSYSTEM}" | true
-  rm -rf "${_basename}-${pkgver}"/glm | true
-  cp -r "${_basename}-${pkgver}" "python-build-${MSYSTEM}"
-  cp -r "glm-${_glmver}" "python-build-${MSYSTEM}/glm"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('4ccb6c027622b948aebc501cd8c3c23690293115dc98108f8ed3b7fd533b398f')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
   cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} --root="${pkgdir}" -O1 --skip-build
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
-
-# vim: ts=2 sw=2 et:
