openblas: update to 0.3.29

--- a/mingw-w64-openblas/PKGBUILD
+++ b/mingw-w64-openblas/PKGBUILD
@@ -5,8 +5,8 @@ _realname=OpenBLAS
 pkgbase=mingw-w64-openblas
 pkgname=("${MINGW_PACKAGE_PREFIX}-openblas"
          $([[ "${CARCH}" == "i686" ]] || echo "${MINGW_PACKAGE_PREFIX}-openblas64"))
-pkgver=0.3.28
-pkgrel=3
+pkgver=0.3.29
+pkgrel=1
 pkgdesc="An optimized BLAS library based on GotoBLAS2 1.13 BSD, providing optimized blas, lapack, and cblas (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -28,10 +28,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "dos2unix")
 options=('!buildflags')
 source=(https://github.com/OpenMathLib/OpenBLAS/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz
+        001-fix-build-with-flang-and-openmp.patch
         002-lgfortran-requires-lquadmath.patch
         004-aarch64-detection.patch
         005-fix-pkgconfig-files.patch)
-sha256sums=('f1003466ad074e9b0c8d421a204121100b0751c96fc6fcf3d1456bd12f8a00a1'
+sha256sums=('38240eee1b29e2bde47ebb5d61160207dc68668a54cac62c076bb5032013b1eb'
+            'f8a78a18b9bfc2c58c2a15e86bdf0edb0b1018a482c7fd9ca53de1d22eff0a3d'
             'c147ec053bdf0387d499372472365aa829db0d8200b6828b0ebce5209e8603fd'
             '70ce007ff4f6c2a127f9835ce9cd85081707cf3bcccddcfaa06817b06f69c941'
             'a5c94f3c089a85c691ce67f0ad2e090d7d4ef951beee040248a5eaf0ee12b33d')
@@ -49,6 +51,7 @@ prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
 
   apply_patch_with_msg \
+    001-fix-build-with-flang-and-openmp.patch \
     002-lgfortran-requires-lquadmath.patch \
     004-aarch64-detection.patch \
     005-fix-pkgconfig-files.patch
@@ -70,11 +73,6 @@ _build_openblas() {
     _extra_config+=("-DTARGET=CORTEXA53" "-DDYNAMIC_ARCH=ON" "-DDYNAMIC_LIST='CORTEXA53;CORTEXA57;CORTEXA72;CORTEXA73;CORTEXA76;CORTEXX1;THUNDERX;TSV110;EMAG8180'")
   else
     _extra_config+=("-DTARGET=CORE2" "-DDYNAMIC_ARCH=ON")
-  fi
-
-  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
-    _extra_config+=("-DOpenMP_Fortran_FLAGS=-fopenmp" "-DOpenMP_Fortran_LIB_NAMES=omp")
-    export FFLAGS="-I${MINGW_PREFIX}/include"
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
