popt: update to 1.19
Remove some patches which were added in upstream.

278402-manpage.all.patch
https://github.com/rpm-software-management/popt/commit/6f091ccc29a75ee5f162a884aa09fa5cf9b9f10c

318833.all.patch
https://github.com/rpm-software-management/popt/commit/7219e1ddc1e8606dda18c1105df0d45d8e8e0e09

356669.all.patch
https://github.com/rpm-software-management/popt/commit/3533b2083a741aa91f6dafa8ee7ef807fde0a935

--- a/mingw-w64-popt/PKGBUILD
+++ b/mingw-w64-popt/PKGBUILD
@@ -4,13 +4,13 @@
 _realname=popt
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.18
-pkgrel=2
+pkgver=1.19
+pkgrel=1
 pkgdesc="C library for parsing command line parameters (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/rpm-software-management/popt"
-license=("MIT")
+license=("spdx:MIT")
 depends=("${MINGW_PACKAGE_PREFIX}-gettext-runtime")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools"
@@ -19,32 +19,34 @@ source=(http://ftp.rpm.org/popt/releases/popt-1.x/${_realname}-${pkgver}.tar.gz
         "0001-nl_langinfo.mingw32.patch"
         "197416.all.patch"
         "217602.all.patch"
-        "278402-manpage.all.patch"
-        "318833.all.patch"
-        "356669.all.patch"
         "get-w32-console-maxcols.mingw32.patch"
         "no-uid-stuff-on.mingw32.patch")
-sha256sums=('5159bc03a20b28ce363aa96765f37df99ea4d8850b1ece17d1e6ad5c24fdc5d1'
+sha256sums=('c25a4838fc8e4c1c8aacb8bd620edb3084a3d63bf8987fdad3ca2758c63240f9'
             '33ecd8c6b99597256954763c81d90e7e65a2ddaaab3ae17c8a7769c77be0b22b'
             '309d083fba6c7ae9b6088755cc36373481b355806142485d3c9f356dd6355bce'
             'e4f9383cb4821976f513f64fc8c64e0dfadcc7c031e5cdce2bbe89fb6d9a40c4'
-            '99b9b5547edfac75eddb90083e3d19c0076d25f1d3e1ad165b49af81ecad8ce9'
-            'd5616778c0233e6a010995ef9b13a780fa5d7c29cf868e0c975dd2165d41d805'
-            '57f48a2f683b7a06d89e8f3973afecfc488e4ec5067ddd357028753ff5dee93e'
             '9ad9dcff285cc34abca6c5b2f1f27e050134392562cdc41706d919adeb516dd4'
             '0a202a7e53348138c4c9c22e8a6aa089fc66ea105b64ec4251c3cb2ebf11ffae')
+
+_apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -p1 -i "${srcdir}/${_patch}"
+  done
+}
 
 prepare() {
   cd "$srcdir/${_realname}-$pkgver"
   rm -rf po/ca.po || true
-  patch -p1 -i $srcdir/0001-nl_langinfo.mingw32.patch
-  patch -p1 -i $srcdir/197416.all.patch
-  patch -p1 -i $srcdir/217602.all.patch
-  patch -p1 -i $srcdir/278402-manpage.all.patch
-  patch -p1 -i $srcdir/318833.all.patch
-  patch -p1 -i $srcdir/356669.all.patch
-  patch -p1 -i $srcdir/get-w32-console-maxcols.mingw32.patch
-  patch -p1 -i $srcdir/no-uid-stuff-on.mingw32.patch
+
+  _apply_patch_with_msg \
+    0001-nl_langinfo.mingw32.patch \
+    197416.all.patch \
+    217602.all.patch \
+    get-w32-console-maxcols.mingw32.patch \
+    no-uid-stuff-on.mingw32.patch
+
   autoreconf -fiv
 }
 
