--- a/mingw-w64-munt-mt32emu/PKGBUILD
+++ b/mingw-w64-munt-mt32emu/PKGBUILD
@@ -3,13 +3,13 @@
 _realname=munt-mt32emu
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=1
 pkgdesc="mt32emu is a C/C++ library which allows to emulate (approximately) the Roland MT-32, CM-32L and LAPC-I synthesiser modules. (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://munt.sourceforge.io/"
-license=("LGPL2.1")
+license=('spdx:LGPL-2.1-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cmake"
@@ -17,10 +17,9 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
 )
 source=("https://github.com/munt/munt/archive/refs/tags/libmt32emu_${pkgver//./_}.tar.gz")
-sha256sums=('5ede7c3d28a3bb0d9e637935b8b96484fadb409c9e5952a9e5432b3e05e5dbc1')
+sha256sums=('e4524d52d6799a4e32a961a2e92074f14adcb2f110a4e7a06bede77050cfdaf4')
 
 build() {
-  [[ -d "${srcdir}"/build-${MSYSTEM} ]] && rm -rf "${srcdir}"/build-${MSYSTEM}
   mkdir -p "${srcdir}"/build-${MSYSTEM} && cd "${srcdir}"/build-${MSYSTEM}
 
   declare -a extra_config
