paho.mqtt.c: update to 1.3.14

--- a/mingw-w64-paho.mqtt.c/PKGBUILD
+++ b/mingw-w64-paho.mqtt.c/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=paho.mqtt.c
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.3.13
+pkgver=1.3.14
 pkgrel=1
 pkgdesc="Eclipse Paho MQTT C client (mingw-w64)"
 arch=('any')
@@ -12,15 +12,16 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'aur: paho-mqtt-c'
 )
-url='https://eclipse.org/paho/clients/c/'
+msys2_repository_url='https://github.com/eclipse-paho/paho.mqtt.c'
+url='https://eclipse-paho.github.io/paho.mqtt.c/MQTTClient/html/'
 license=('spdx:EPL-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "unzip")
 depends=("${MINGW_PACKAGE_PREFIX}-openssl")
-source=("https://github.com/eclipse/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.zip")
-sha256sums=('5ba7c7ab7ebb1499938fa2e358e6c1f9a926b270f2bf082acf89d59b4771a132')
+source=("https://github.com/eclipse-paho/paho.mqtt.c/archive/v${pkgver}/${_realname}-${pkgver}.zip")
+sha256sums=('ad67f3920b4dc618867c573626f6dbddc213d3f759abbdb9d785f7f85d086e41')
 noextract=("${_realname}-${pkgver}.zip")
 
 prepare() {
