qoi: update to r346.b0b926e

--- a/mingw-w64-qoi/PKGBUILD
+++ b/mingw-w64-qoi/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=qoi
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=r335.d4fc9d1
+pkgver=r346.b0b926e
 pkgrel=1
-_commit='d4fc9d1edf44e5d7e76a9ee64ef08ae4c5c2efda'
+_commit='b0b926ee70108b0113dd2718d13d2207c474ed2e'
 pkgdesc="The 'Quite OK Image' format for fast, lossless image compression (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,7 +17,7 @@ msys2_references=(
 license=('spdx:MIT')
 makedepends=("git")
 source=("git+https://github.com/phoboslab/qoi.git#commit=${_commit}")
-sha256sums=('SKIP')
+sha256sums=('d765d77e3131960def3d6ee39e77d89e6b1beec28f270af8b515c30253c470d7')
 
 pkgver() {
   cd "${_realname}"
