--- a/mingw-w64-tiled/PKGBUILD
+++ b/mingw-w64-tiled/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=tiled
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.11.0
-pkgrel=3
+pkgver=1.11.1
+pkgrel=1
 pkgdesc='A general purpose tile map editor, built to be flexible and easy to use (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
 url='https://www.mapeditor.org'
+msys2_repository_url='https://github.com/mapeditor/tiled'
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-qt6-base"
@@ -26,14 +27,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 optdepends=("${MINGW_PACKAGE_PREFIX}-python: Python plugin"
             "${MINGW_PACKAGE_PREFIX}-qt6-imageformats: Support for additional image formats (including WebP)"
             "${MINGW_PACKAGE_PREFIX}-qt6-translations")
-source=("https://github.com/mapeditor/tiled/archive/v${pkgver}/$_realname-$pkgver.tar.gz"
-        "001-Fixed-compile-against-Qt-6.8.patch::https://github.com/mapeditor/tiled/commit/37013721.patch")
-sha256sums=('8ca549341fe1d13f633494fcde5880205301e6bb26ee66f307d76a2efb7e21da'
-            '5c9c2ca9ff33911ded8357a763164343281d8de39e0a58d59ae03dfe87ea2fc7')
+source=("${msys2_repository_url}/archive/v${pkgver}/$_realname-$pkgver.tar.gz"
+        '0001-tiled-1.11.1-no-link-python-fix.patch')
+sha256sums=('2e5e4f040eb1804f79aa9487f7a83d1103edffd52f9da6293b2cd4f166f60f5f'
+            '3c7f440a8305d2fa2cda652e23cfe6e15d985d9e0d20c2c602b3e5180e682bee')
 
 prepare() {
   cd ${_realname}-${pkgver}
-  patch -p1 -i "${srcdir}"/001-Fixed-compile-against-Qt-6.8.patch
+  patch -p1 -i "${srcdir}"/0001-tiled-1.11.1-no-link-python-fix.patch
 }
 
 build() {
