NFC: left from previous commit.

--- a/mingw-w64-python2-setuptools/PKGBUILD
+++ b/mingw-w64-python2-setuptools/PKGBUILD
@@ -56,14 +56,14 @@ prepare() {
       -e '/tag_date = 1/d' \
       -i setuptools-${pkgver}/setup.cfg
 
-  cp -r setuptools-${pkgver} setuptools-python-${CARCH}
+  cp -r setuptools-${pkgver} setuptools-python-${MSYSTEM}
 
-  cd "${srcdir}"/setuptools-python-${CARCH}
+  cd "${srcdir}"/setuptools-python-${MSYSTEM}
   sed -i -e "s|^#\!.*/usr/bin/env python|#!/usr/bin/env python2|" setuptools/command/easy_install.py
 }
 
 build() {
-  cd "${srcdir}"/setuptools-python-${CARCH}
+  cd "${srcdir}"/setuptools-python-${MSYSTEM}
 
   ${MINGW_PREFIX}/bin/python2 bootstrap.py
   ${MINGW_PREFIX}/bin/python2 setup.py build
@@ -72,7 +72,7 @@ build() {
 package() {
   local _mingw_prefix=$(cygpath -wm ${MINGW_PREFIX})
 
-  cd "${srcdir}/setuptools-python-${CARCH}"
+  cd "${srcdir}/setuptools-python-${MSYSTEM}"
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
     ${MINGW_PREFIX}/bin/python2 setup.py install --prefix=${MINGW_PREFIX#\/} --root="${pkgdir}" --optimize=1 --skip-build
 
