vtk: update to 9.4.1
Remove patches that have been applied upstream.
Fix compilation issues with `clang++` version 19.
Fix new build issues with fmt 11.
Cherry-pick patches from upstream VTK-m.
Update patch to make it apply cleanly.
Update DIY to version 3.6.0 to avoid compilation issue with C++ STL from LLVM 19 (`std::char_traits<T>` can no longer be instantiated with arbitrary types).
Add patch to fix compatibility with DIY 3.
Add patch to fix build issue of the InfovisBoostGraphAlgorithms module that requires C++14 now.
Add patch for the ANARI rendering module to fix an issue with undeclared type identifiers.
Add optional dependencies for new Alembic and ANARI modules.

--- a/mingw-w64-vtk/PKGBUILD
+++ b/mingw-w64-vtk/PKGBUILD
@@ -4,8 +4,8 @@
 _realname=vtk
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=9.3.1
-pkgrel=7
+pkgver=9.4.1
+pkgrel=1
 pkgdesc="A software system for 3D computer graphics, image processing and visualization (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -39,6 +39,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-adios2"
+             "${MINGW_PACKAGE_PREFIX}-alembic"
+             $([[ ${MSYSTEM} == MINGW64 ]] || echo "${MINGW_PACKAGE_PREFIX}-anari-sdk")
              "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cgns"
              "${MINGW_PACKAGE_PREFIX}-cli11"
@@ -73,6 +75,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-utf8cpp"
              )
 optdepends=("${MINGW_PACKAGE_PREFIX}-adios2: I/O ADIOS2"
+            "${MINGW_PACKAGE_PREFIX}-alembic: I/O Alembic"
             "${MINGW_PACKAGE_PREFIX}-boost: InfovisBoost and InfovisBoostGraphAlgorithms modules"
             "${MINGW_PACKAGE_PREFIX}-cgns: CGNS Reader"
             "${MINGW_PACKAGE_PREFIX}-ffmpeg: I/O FFMPEG"
@@ -102,22 +105,33 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-adios2: I/O ADIOS2"
             "${MINGW_PACKAGE_PREFIX}-sqlite3: I/O SQL"
             # "${MINGW_PACKAGE_PREFIX}-tk: TCL bindings, Python Tk widgets"
             "${MINGW_PACKAGE_PREFIX}-unixodbc")
+if [[ ${MSYSTEM} != MINGW64 ]]; then
+  optdepends+=("${MINGW_PACKAGE_PREFIX}-anari-sdk: ANARI Rendering")
+fi
 source=(https://www.vtk.org/files/release/${pkgver%.*}/VTK-${pkgver}.tar.gz
         "001-no-exact-version-for-fast_float.patch"
-        "002-Fix-build-with-gcc-13.patch"
+        "002-llvm-19-compatibility.patch"
         "003-fix-build-with-fmt-11.patch"
         "004-accept-future-versions-of-boost-and-occ.patch"
-        "005-opencascade-7.8.patch"::https://gitlab.kitware.com/vtk/vtk/-/merge_requests/11159.patch
+        "005-remove-unused-method-from-mir-tables.patch"
+        "006-fix-compile-error-for-contour-tree-print.patch"
         "007-dll-export-some-functions.patch"
-        "008-Fix-vtkm_openmp-exported-target.patch")
-sha256sums=('8354ec084ea0d2dc3d23dbe4243823c4bfc270382d0ce8d658939fd50061cab8'
+        "008-update-to-diy-3.6.0.patch"
+        "009-diy-3-compatibility.patch"
+        "010-boost-math-requires-cxx-14.patch"
+        "011-anari-integer-types.patch")
+sha256sums=('c253b0c8d002aaf98871c6d0cb76afc4936c301b72358a08d5f3f72ef8bc4529'
             '411b0521fcd2864acae0af20ba6334f69f7c605c9e31996529f64aa749d61065'
-            '20733e97ccf9b0a8e615c75936ce5e4c1db0ac00e9cac30bc359d5912da38990'
-            '7c15ee91447c9199dafaa32eb3cf6afbf16e6306b7879a2dcd9f4ebc95c2e75e'
+            '410ddfbb2acb66746771a0e1f3ad81230904f712729af29cd26e8aaaa19dc48e'
+            '2d1795111b410e0fbb8e7b08fab2e83e37e74ca0d7fd6685d435d4b27f355b87'
             'a44b3ba4bdc02be4767ff48b8a7fd4206a53756a881421fca99f538b08a7b48c'
-            '761183f537772c8a75e0b41d1587872895c4ecd02c3d4fadcac78ac952cc975d'
-            'a9b9292be90c259f0aa058e3f4a7a08b6218f20e6cb2a71e214acda2d2302a50'
-            '988ef1d43dadf1da157fc69398f545c6d2e82d2dabd7cb830e9fba9ebaba34ac')
+            '66e3ac19197fb9f6f49dc98a746919ed025619ab8dae433d153c22ca595d92bc'
+            'ace675cf8a9081532756b66d4f1ca1b03b12dad719b79e8cfa60ee6d60e2eeaf'
+            '6cc0c44b2cb9693b8ae101fdde186561633fc6e6629c6e797231331895baa5df'
+            '7602c7b4afa61f57f27022d4ea015c6e3c1d4ab8df5907ca828e08bb48c26b20'
+            '19ffd04b06b4c3c0c3f0b1b375cbac956191d4b7d3fa1066dc62bbfe78d69908'
+            '1d5e3b29631d976aea356ad2ed2f9a38ee1ac8eefdeb269655c0773556e44868'
+            'd76aa1788bbe2dd14390d4c7a4e65bcd652e4521324a7982ef7ead2306c82436')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -133,13 +147,17 @@ prepare() {
 
   apply_patch_with_msg \
     001-no-exact-version-for-fast_float.patch \
-    002-Fix-build-with-gcc-13.patch \
+    002-llvm-19-compatibility.patch \
     003-fix-build-with-fmt-11.patch \
     004-accept-future-versions-of-boost-and-occ.patch \
-    005-opencascade-7.8.patch \
-    008-Fix-vtkm_openmp-exported-target.patch
+    005-remove-unused-method-from-mir-tables.patch \
+    006-fix-compile-error-for-contour-tree-print.patch \
+    008-update-to-diy-3.6.0.patch \
+    009-diy-3-compatibility.patch \
+    010-boost-math-requires-cxx-14.patch \
+    011-anari-integer-types.patch
 
-  # Succeed with Clang but failed with GCC!
+  # Succeeds with Clang but fails with GCC!
   if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
     apply_patch_with_msg \
       007-dll-export-some-functions.patch
@@ -157,7 +175,8 @@ build() {
   fi
 
   if [[ ${MSYSTEM} == MINGW64 ]]; then
-    _extra_config+=("-DVTK_MODULE_USE_EXTERNAL_VTK_verdict=OFF")
+    _extra_config+=("-DVTK_MODULE_ENABLE_VTK_RenderingAnari=NO"
+                    "-DVTK_MODULE_USE_EXTERNAL_VTK_verdict=OFF")
   fi
 
   CFLAGS+=" ${CPPFLAGS}"
@@ -183,6 +202,7 @@ build() {
     -DVTK_MODULE_USE_EXTERNAL_VTK_exprtk=OFF \
     -DVTK_MODULE_USE_EXTERNAL_VTK_ioss=OFF \
     -DVTK_MODULE_USE_EXTERNAL_VTK_pegtl=OFF \
+    -DVTK_MODULE_USE_EXTERNAL_VTK_token=OFF \
     -DVTK_WRAP_JAVA=OFF \
     -DVTK_WRAP_PYTHON=ON \
     -DVTK_SMP_IMPLEMENTATION_TYPE=TBB \
