wasm-bindgen: update to 0.2.100

--- a/mingw-w64-wasm-bindgen/PKGBUILD
+++ b/mingw-w64-wasm-bindgen/PKGBUILD
@@ -4,7 +4,7 @@ _realname=wasm-bindgen
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=0.2.99
+pkgver=0.2.100
 pkgrel=1
 pkgdesc="Facilitating high-level interactions between Wasm modules and JavaScript (mingw-w64)"
 arch=('any')
@@ -21,9 +21,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-mdbook"
 source=("git+${url}.git#tag=${pkgver}"
         "git+https://github.com/alexcrichton/raytracer.git#commit=42faa13859f7d8d47fd18be785c108003a207786"
         "Cargo.lock")
-sha256sums=('8fa2696ed80ff868492177a0240a00b6d6f7fdeff5616feff4f2d1230a05c276'
+sha256sums=('beea04f364c7fe5fbb041c899d5c2d27a74ad0de2cb7315418fc62d6a40ae7a6'
             '0a96c55cb3ed65a958aeaadca093b25c6725b166e9c5a85b635a0e3d76d5f533'
-            '17b75d89ce63d88c86082df5b70af29fe0d402d8aadb8202d8f4df1f0a3b8345')
+            '9428b72bd6b2220d923a225d1b79027a13766709a05a7384c960563488d193a0')
 
 prepare() {
   cd "${_realname}"
@@ -73,9 +73,9 @@ package_wasm-bindgen() {
 package_wasm-bindgen-docs() {
   pkgdesc+=" (Documentation)"
   depends=()
-  cd "${_realname}"
+
   install -d "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/"
-  cp -r -t "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/" guide/book/html/*
+  cp -r -t "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/" "${_realname}"/guide/book/html/*
 }
 
 # vim: set ft=bash :
