--- a/mingw-w64-SDL2_sound/PKGBUILD
+++ b/mingw-w64-SDL2_sound/PKGBUILD
@@ -3,11 +3,12 @@
 _realname=SDL2_sound
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2.0.2
+pkgver=2.0.4
 pkgrel=1
 pkgdesc="A library to decode several popular sound file formats, such as .WAV and .MP3 (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+msys2_repository_url='https://github.com/icculus/SDL_sound'
 url='https://icculus.org/SDL_sound/'
 license=('spdx:LGPL-2.1-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-SDL2")
@@ -15,12 +16,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=("https://github.com/icculus/SDL_sound/releases/download/v${pkgver}/SDL2_sound-${pkgver}.tar.gz") # {,.sig}
-sha256sums=('465a81d6004af731768b881b2f50383150cc58a8d346653bad85e2375829cc3a')
+sha256sums=('f73f6720dba2e677c0bf70d0c76ca3c96d865d04025e49a8b161711685961931')
 # validpgpkeys=('50F91FB550EC32AB4A710286FA148B892AB48044') # icculus@icculus.org
-
-prepare() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-}
 
 build() {
   declare -a extra_config
