pugixml: update to 1.15

--- a/mingw-w64-pugixml/PKGBUILD
+++ b/mingw-w64-pugixml/PKGBUILD
@@ -3,22 +3,23 @@
 _realname=pugixml
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.14
+pkgver=1.15
 pkgrel=1
 pkgdesc="Light-weight, simple and fast XML parser for C++ with XPath support (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://pugixml.org/"
+msys2_repository_url='https://github.com/zeux/pugixml'
 msys2_references=(
   "cpe: cpe:2.3:a:pugixml_project:pugixml"
 )
-license=("MIT")
+license=("spdx:MIT")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=(https://github.com/zeux/pugixml/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz)
-sha256sums=('2f10e276870c64b1db6809050a75e11a897a8d7456c4be5c6b2e35a11168a015')
+sha256sums=('655ade57fa703fb421c2eb9a0113b5064bddb145d415dd1f88c79353d90d511a')
 
 build() {
   declare -a extra_config
@@ -28,7 +29,6 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  [[ -d ${srcdir}/build-shared-${MSYSTEM} ]] && rm -rf ${srcdir}/build-shared-${MSYSTEM}
   mkdir -p ${srcdir}/build-shared-${MSYSTEM} && cd ${srcdir}/build-shared-${MSYSTEM}
 
   msg "Build shared library"
@@ -42,7 +42,6 @@ build() {
 
   ${MINGW_PREFIX}/bin/cmake.exe --build .
 
-  [[ -d ${srcdir}/build-static-${MSYSTEM} ]] && rm -rf ${srcdir}/build-static-${MSYSTEM}
   mkdir -p ${srcdir}/build-static-${MSYSTEM} && cd ${srcdir}/build-static-${MSYSTEM}
 
   msg "Build static library"
