NFC: Replace `ninja`/`ninja install` with meson and CMake commands.

--- a/mingw-w64-cantarell-fonts/PKGBUILD
+++ b/mingw-w64-cantarell-fonts/PKGBUILD
@@ -36,13 +36,13 @@ build() {
     -Dfontsdir=${MINGW_PREFIX}/share/fonts/cantarell \
     "../${_realname}-${pkgver}"
 
-  ninja
+  meson compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
 
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" meson install
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
