--- a/mingw-w64-d-feet/PKGBUILD
+++ b/mingw-w64-d-feet/PKGBUILD
@@ -47,12 +47,12 @@ build() {
     -Dpython=${MINGW_PREFIX}/bin/python.exe \
     "../${_realname}-${pkgver}"
 
-  ${MINGW_PREFIX}/bin/ninja
+  ${MINGW_PREFIX}/bin/meson compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson install
   install -Dm0644 "${srcdir}/${_realname}-${pkgver}"/COPYING ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING
 
   MSYS2_ARG_CONV_EXCL="-p" python -m compileall \
