--- a/mingw-w64-dumb/PKGBUILD
+++ b/mingw-w64-dumb/PKGBUILD
@@ -31,7 +31,7 @@ build() {
       -DBUILD_ALLEGRO4=OFF \
       -DBUILD_EXAMPLES=OFF \
       ../${_realname}-${pkgver}
-  ${MINGW_PREFIX}/bin/ninja
+  ${MINGW_PREFIX}/bin/cmake --build .
   
   # Static Build
   mkdir -p "${srcdir}"/build-${MSYSTEM}-static && cd "${srcdir}"/build-${MSYSTEM}-static
@@ -45,18 +45,19 @@ build() {
       -DBUILD_ALLEGRO4=OFF \
       -DBUILD_EXAMPLES=OFF \
       ../${_realname}-${pkgver}
-  ${MINGW_PREFIX}/bin/ninja
+  ${MINGW_PREFIX}/bin/cmake --build .
 }
 
 package() {
   # Shared Install
   cd "${srcdir}"/build-${MSYSTEM}-shared
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
   
   # Static Install
   cd "${srcdir}"/build-${MSYSTEM}-static
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
   
   # License
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
