--- a/mingw-w64-evince/PKGBUILD
+++ b/mingw-w64-evince/PKGBUILD
@@ -95,13 +95,13 @@ build() {
      -Dgtk_unix_print=disabled \
      "../${_realname}-${pkgver}"
 
-  ${MINGW_PREFIX}/bin/ninja
+  ${MINGW_PREFIX}/bin/meson compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
 
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" meson install
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
