--- a/mingw-w64-gobject-introspection/PKGBUILD
+++ b/mingw-w64-gobject-introspection/PKGBUILD
@@ -102,7 +102,7 @@ package_gobject-introspection-runtime() {
   cd "${srcdir}/build-${MSYSTEM}"
   local tmp_install="$(pwd)/_temp"
 
-  DESTDIR="${tmp_install}" ninja install
+  DESTDIR="${tmp_install}" meson install
 
   install -Dt "${pkgdir}${MINGW_PREFIX}/bin" "${tmp_install}${MINGW_PREFIX}/bin/libgirepository"*.dll
   install -Dt "${pkgdir}${MINGW_PREFIX}/lib" "${tmp_install}${MINGW_PREFIX}/lib/libgirepository"*.a
