--- a/mingw-w64-gst-python/PKGBUILD
+++ b/mingw-w64-gst-python/PKGBUILD
@@ -35,13 +35,13 @@ build() {
     -Dpython=${MINGW_PREFIX}/bin/python.exe \
     ../${_realname}-${pkgver}
 
-  ${MINGW_PREFIX}/bin/ninja.exe
+  ${MINGW_PREFIX}/bin/meson.exe compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
 
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja.exe install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson.exe install
 
   # The python plugin loader makes problems because it links against libpython
   # which might be in conflict one already used loading the plugin.
