--- a/mingw-w64-gxml/PKGBUILD
+++ b/mingw-w64-gxml/PKGBUILD
@@ -48,7 +48,7 @@ build() {
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" meson install
 
   for pcfile in  "${pkgdir}${MINGW_PREFIX}"/lib/pkgconfig/*.pc; do
     # make sure everything is derived from prefix
