--- a/mingw-w64-libsoup/PKGBUILD
+++ b/mingw-w64-libsoup/PKGBUILD
@@ -52,13 +52,13 @@ build() {
        --default-library both \
       ../${_realname}-${pkgver}
 
-  ninja
+  meson compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
 
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" meson install
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
