--- a/mingw-w64-md4c/PKGBUILD
+++ b/mingw-w64-md4c/PKGBUILD
@@ -44,7 +44,7 @@ build() {
       "${extra_config[@]}" \
       "../${_realname}-release-${pkgver}"
 
-  ninja
+  ${MINGW_PREFIX}/bin/cmake --build .
 
   dir_static="${srcdir}/build-${MSYSTEM}-static"
   mkdir -p "${dir_static}" && cd "${dir_static}"
@@ -57,20 +57,21 @@ build() {
       "${extra_config[@]}" \
       "../${_realname}-release-${pkgver}"
 
-  ninja
+  ${MINGW_PREFIX}/bin/cmake --build .
 }
 
 package() {
   dir_shared="${srcdir}/build-${MSYSTEM}-shared"
-  dir_static="${srcdir}/build-${MSYSTEM}-static"
 
   cd "${dir_shared}"
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
 
   # static libs
+  dir_static="${srcdir}/build-${MSYSTEM}-static"
   install -vDm644 "${dir_static}/src/libmd4c.a" "${pkgdir}${MINGW_PREFIX}/lib/libmd4c.a"
   install -vDm644 "${dir_static}/src/libmd4c-html.a" "${pkgdir}${MINGW_PREFIX}/lib/libmd4c-html.a"
 
   # license
-  install -vDm644 "${srcdir}/${_realname}-release-${pkgver}/LICENSE.md" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.md"
+  install -vDm644 "${srcdir}/${_realname}-release-${pkgver}/LICENSE.md" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.md"
 }
