--- a/mingw-w64-p11-kit/PKGBUILD
+++ b/mingw-w64-p11-kit/PKGBUILD
@@ -91,7 +91,7 @@ build() {
     # -Dtrust_paths=${MINGW_PREFIX}/etc/pki/ca-trust/source:${MINGW_PREFIX}/share/pki/ca-trust-source \
     # ../${_realname}-${pkgver}
 
-  # ninja
+  # meson compile
 
   CFLAGS+=" -Wno-error=incompatible-pointer-types"
 
