--- a/mingw-w64-totem-pl-parser/PKGBUILD
+++ b/mingw-w64-totem-pl-parser/PKGBUILD
@@ -46,12 +46,12 @@ build() {
     -Dintrospection=true \
     ../${_realname}-${pkgver}
 
-  ${MINGW_PREFIX}/bin/ninja
+  ${MINGW_PREFIX}/bin/meson compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson install
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING.LIB" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING.LIB"
 }
