--- a/mingw-w64-usrsctp/PKGBUILD
+++ b/mingw-w64-usrsctp/PKGBUILD
@@ -41,12 +41,12 @@ build() {
     --prefix="${MINGW_PREFIX}" \
     "${extra_config[@]}" \
     "../${_realname}-${pkgver}"
-  ninja
+  meson compile
 }
 
 package() {
   cd "${srcdir}"/build-${MSYSTEM}
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" meson install
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.md" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.md"
 }
