--- a/mingw-w64-gst-rtsp-server/PKGBUILD
+++ b/mingw-w64-gst-rtsp-server/PKGBUILD
@@ -46,13 +46,13 @@ build() {
     -Ddoc=disabled \
     ../${_realname}-${pkgver}
 
-  ${MINGW_PREFIX}/bin/ninja.exe
+  ${MINGW_PREFIX}/bin/meson.exe compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
 
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja.exe install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson.exe install
 
   rm -f ${pkgdir}${MINGW_PREFIX}/lib/gstreamer*/*.a
 }
