--- a/mingw-w64-libgxps/PKGBUILD
+++ b/mingw-w64-libgxps/PKGBUILD
@@ -48,12 +48,12 @@ build() {
     -Denable-gtk-doc=true \
     ../${_realname}-${pkgver}
 
-  ninja
+  meson compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" meson install
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
