--- a/mingw-w64-libmicrodns/PKGBUILD
+++ b/mingw-w64-libmicrodns/PKGBUILD
@@ -34,12 +34,12 @@ build() {
     --buildtype=plain \
     ../${_realname}-${pkgver}
 
-  ${MINGW_PREFIX}/bin/ninja
+  ${MINGW_PREFIX}/bin/meson compile
 }
 
 package() {
   cd build-${MSYSTEM}
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson install
 
   install -Dm644 ${srcdir}/${_realname}-${pkgver}/COPYING ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING
 }
