--- a/mingw-w64-libxml++/PKGBUILD
+++ b/mingw-w64-libxml++/PKGBUILD
@@ -41,12 +41,12 @@ build() {
       -Dbuild-examples=false \
       ../${_realname}-${pkgver}
 
-  ninja
+  meson compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" meson install
 
   install -Dm644 ${srcdir}/${_realname}-${pkgver}/COPYING "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
