--- a/mingw-w64-libxml++2.6/PKGBUILD
+++ b/mingw-w64-libxml++2.6/PKGBUILD
@@ -39,12 +39,12 @@ build() {
       -Dbuild-documentation=true \
       ../${_realname}-${pkgver}
 
-  ninja
+  meson compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" meson install
 
   install -Dm644 ${srcdir}/${_realname}-${pkgver}/COPYING "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}2.6/COPYING"
 }
