--- a/mingw-w64-spice-protocol/PKGBUILD
+++ b/mingw-w64-spice-protocol/PKGBUILD
@@ -31,12 +31,12 @@ build() {
     --buildtype=plain \
     --default-library=both \
     "../${_realname}-${pkgver}"
-  ninja
+  meson compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
-  DESTDIR="${pkgdir}" ninja install
+  DESTDIR="${pkgdir}" meson install
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}"/COPYING ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING
 }
